# data-rights-protocol

./: .gitignore  .gitmodules  DRP-V01.md  DRP-V02.md  LICENSE  LICENSE.md  README.md  businesses.html  conformance-tests.org  conformance-tools.org  data-request.json  data-rights-protocol.md  default.nix  gen_cases.py  implementation-guide.org  implementation-guides.md  index.html  openapi.yaml  pyproject.toml  shell.nix  status_server.py  sticky-footer.css  swimlane.md
businesses/: README.md  index.html  readme.md
cert/: README.org  conformance-tests.org  conformance-tools.org  default.nix  pyproject.toml  shell.nix
cert/reqs/: donotsell.json
cert/src/datarightsprotocol/models/: identity.py  test_models.py
cert/src/datarightsprotocol/tools/: genjwts.py  status_server.py  swagger.py
docs/: CNAME  README.md  bootstrap.min.css  businesses.html  index.html  index.md
files/: README.md  drp-08-errata.md  drp-1.0-sequence-diagram.plantuml  drp0.9..PS_sequence_diagram.plantuml  req-resp-sequence-diagram.txt
jwts/: simple.json
models/: __init__.py  base.py  core.py  identity.py  invariants.py  test_models.py
src/datarightsprotocol/models/: core.py  identity.py  invariants.py  test_models.py
src/datarightsprotocol/tools/: genreqs.py  status_server.py
tools/: genjwts.py  genreqs.py
